--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1672,20 +1672,47 @@ input, select, textarea {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 10px;
-    margin-top: 1em;
+    gap: 1rem;
+    margin-top: 1rem;
+    padding: 1.25rem;
+    background-color: rgba(255, 255, 255, 0.05);
+    border-radius: 10px;
 }
+
 
 .badge {
     background-color: rgba(128, 128, 128, 0.3); 
     color: #fff; 
-    padding: 10px 15px;
-    border-radius: 20px;
+	padding: 0.5rem 0.75rem;
+    border-radius: 1.25rem;
     font-size: 0.9em;
     display: inline-block;
     border: 1px solid rgba(128, 128, 128, 0.5); 
 }
 
+.skills-badges h3 {
+    width: 100%;
+    text-align: center;
+    margin-top: 1rem;
+	margin-bottom: 0.10rem;
+    font-size: 1.3em;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: .5rem;
+    position: relative;
+	padding-bottom: .5rem;
+}
+
+.skills-badges h3::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 3rem;
+    height: 0.125rem;;
+    background-color: #fff;
+}
 
 
 
